--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "dev":"node --watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
