--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev":"node --watch server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node --watch server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
